
General: increased lowest-upgrade-version to v8.3.00 to reduce file size
	Edited files /CHANGELOG.txt, CHANGEDB.php

General: added new visualisation library (not loaded by default)
	New folder /lib/vis
	
General: added Bangladeshi Taka as currency option
	Edited file /modules/System Admin/systemSettings.php
	Edited file /installer/install.php

v10.0.00
--------
i18n: added Urdu as inactive development language
	Added value to table gibboni18n

School Admin: added form checking to make sure sequence number is unique
	Edited file /modules/School Admin/schoolYearTerm_manage_add.php

Students: added timetable to Summary view, which is now called Overview...for fewer clicks
	Edited file /modules/Timetable/moduleFunctions.php
	Edited file /modules/Students/student_view_details.php

Staff: added timetable to Summary view, which is now called Overview...for fewer clicks
	Edited file /modules/Staff/staff_view_details.php

Messenger: added ability to target messenges based on transport type
	New values in tables gibbonAction, gibbonPermission
	Edited table gibbonMessengerTarget
	Edited files /modules/Messenger/messenger_post*.php

Messenger: fixed minor error in recipient report
	Edited file /modules/Messenger/messenger_manage.php

Students: added transport notes field
	Edited table gibbonPerson
	Edited files /modules/User Admin/user_manage_add*.php, user_manage_edit*.php
	Edited file /modules/Students/student_view_details.php

Timetable: fixed PHP notice issue when viewing individual with all users option on
	Edited file /modules/Timetable/tt_view.php

General: improved Quick File Upload experience in rich text editor
	Edited file /functions.php
	Edited files /modules/Resources/resources_addQuick_ajax*.php

System Admin: improved translatability of Y/N files in system settings
	Edited file /modules/System Admin/systemSettings.php

General: improved translatability of Y/N files in preferences
	Edited file /preferences.php

Messenger: added publish dates to manage listing