@@ -495,6 +495,9 @@ General: added Bangladeshi Taka as currency option
 	Edited file /modules/System Admin/systemSettings.php
 	Edited file /installer/install.php
 
+General: added minor link back to school home page when not logged in
+	Edited file /functions.php
+
 v10.0.00
 --------
 i18n: added Urdu as inactive development language
